style: fix sticky layout bugs

--- a/nodes/static/nodes/css/widgets/full-navigation-layout.css
+++ b/nodes/static/nodes/css/widgets/full-navigation-layout.css
@@ -4,10 +4,16 @@ body {
   padding: 0;
   height: 100%;
 }
+
+.navbar {
+  height: 3.7rem;
+}
+
 .outer-body-container {
-  height: inherit;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  overflow: auto;
 }
 .outer-body-container__topbar {
   flex-shrink: 0;
@@ -22,6 +28,9 @@ body {
   background-color: var(--color-secondary);
   max-width: 60%;
   overflow: auto;
+  height: calc(100vh - 3.7rem);
+  position: sticky;
+  top: 0;
 }
 .main-column-container__breadcrumbs {
   padding: 0.75rem 1rem;
@@ -53,12 +62,11 @@ body {
     flex-grow: 1;
     overflow: visible;
   }
-  .navbar {
-    height: 3.5rem;
-  }
   .horizontal-body-container__sidebar {
     max-width: 100%;
     overflow: auto;
+    height: auto;
+    position: static;
   }
 }
 .outer-body-container__scrollable-area {
