--- a/nodes/static/nodes/css/widgets/iframe-node.css
+++ b/nodes/static/nodes/css/widgets/iframe-node.css
@@ -6,6 +6,6 @@
 }
 @media (max-width: 768px) {
   .iframe-node {
-    min-height: calc(100vh - 3.5rem);
+    min-height: calc(100vh - 3.7rem);
   }
 }
