--- a/nodes/static/nodes/css/widgets/sidebar.css
+++ b/nodes/static/nodes/css/widgets/sidebar.css
@@ -2,8 +2,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  position: sticky;
-  top: 0;
 }
 
 .sidebar-navbar__item {
